#86bz46n3r - add dependency for jsoup